--- a/building-a-regularity-classifier.tex
+++ b/building-a-regularity-classifier.tex
@@ -67,7 +67,7 @@ $$
 %This reasoning applied to relation~\ref[ACI] leads to the conclusion that~$C^{[k]}\neq 0$.  If fact, if 
 If the element~$C^{[k]}_k$ were equal to zero, then we could apply the just mentioned reasoning to relation~\ref[ACI] obtaining that
 $$
-\Bm A^{(k)}\,(C^{[k]}_1,\dots,\rlap{\typoscale[1700/]$\backslash$} C^{[k]}_k,\dots, C^{[k]}_N)^T =  \hbox{\bf 0},
+\Bm A^{(k)}\,(C^{[k]}_1,\dots,\rlap{\typoscale[1700/]$\backslash$} C^{[k]}_k,\dots, C^{[k]}_N)^T =  \Bm 0,
 $$
 and hence that $C^{[k]}_j$ would be zero also for each~$j\neq k$. Since equation~\ref[ACI]  implies that~$\Bm C^{\.[k]}$  cannot be the zero vector, we must conclude that~$C^{[k]}_k\neq 0$.
 
@@ -170,7 +170,7 @@ $$
 associated to the pair of data~$(X, F)$ by setting
 $$
 \Bm Q\coloneq \cases{\displaystyle{\Bm U \over \,\norm s_\phi^2} & if $\norm s_\phi\neq 0$ \cr
-\hbyw{2.6ex}{.5em}\hbox{\bf 0} & if $\norm s_\phi = 0$}
+\hbyw{2.6ex}{.5em}\Bm 0 & if $\norm s_\phi = 0$}
 $$
 \postskip
 
