--- a/the-interpolation-problem.tex
+++ b/the-interpolation-problem.tex
@@ -45,7 +45,7 @@ $$
 \Cal{N}(X) = \bigl\{\,s\in\Cal C^2([a,b])\,: \>s|_{[a,\, x_1]}, s|_{[x_N,\, b]}\in\Cal P_1, \mathbox{and } s|_{[x_j,\, x_{j+1}]}\in\Cal P_3\mathbox{ for all~$j$}\,\bigr\}\mathbox,
 $$
 then $\Cal S$ is a linear space of dimension~$N$, which is nondegenerate for~$X$ (more details can be found in Wendland~\cite[wendland_2004], at the section  “Learning from splines”).
-Differently from the previous example, here the space~$\Cal S$ (where lay the interpolants to the pairs of data~$(X, F)$, for each~$F$) depends on the locations~$X$.  So this space~$\Cal S$ allows to interpolate only on one fixed set of locations---if we change the locations, we also have to change the space accordingly.
+Differently from the previous example, here the space~$\Cal S$ (where lie the interpolants to the pairs of data~$(X, F)$, for each~$F$) depends on the locations~$X$.  So this space~$\Cal S$ allows to interpolate only on one fixed set of locations---if we change the locations, we also have to change the space accordingly.
 \medskip
 
 \label[dist]
