--- a/properties-of-the-classifier.tex
+++ b/properties-of-the-classifier.tex
@@ -8,7 +8,7 @@ Each quantity will be dependent on $ε$, but we don't explicitly denote the depe
 \postskip
 
 \preskip
-\property $\Bm Q$ converges as $ε$ approaches zero. 
+\property $\Bm Q$ converges as $ε\to 0$. 
 \proof
 Notice that $\norm s_\phi = 0$ either for all~$ε$ or for none. When it is zero, $\Bm Q$~is constantly equal to the zero vector, and its convergence is proved.  If instead $\norm s_\phi\neq 0$, then the elements $Q_k$ of the vector~$\Bm Q$ are defined as~$Q_k = U_k/\smash{\norm s_\phi^2}$. By expanding the scalar product in the denominator and recalling the definition of the cross validation vector~$\Bm E$, we can split~$Q_k$ into two parts, namely
 $$
@@ -17,12 +17,27 @@ $$
 where, as usual, $\Bm α$~is the vector of coefficients of~$s$ with respect to the basis of kernel translates. Both terms $E_k$ and~$W_k$ can be written in terms ratios of pairs of elements of the inverse~$\Bm C$ of the interpolation matrix~$\Bm A=\Bm A_{\phi, X}$.  In fact,
 $$
 \eqalign{
-  E_K &= {α_k \over C_{k,k}} = {(\Bm C\. \Bm f\,)_k \over C_{k,k}} =  {\sum_{j=1}^N C_{k,j}\, f_j \over C_{k,k}} = \sum_{j = 1}^N f_j\,\frame{$\displaystyle \hbyw{1.8ex}{0em} C_{k,j} \over \displaystyle C_{k,k}$}\,,\cr
-  W_k &= {α_k \over \Bm α^T \Bm f}
+  &E_k = {α_k \over C_{k,k}} = {(\Bm C\. \Bm f\,)_k \over C_{k,k}} =  {\sum_{j=1}^N C_{k,j}\, f_j \over C_{k,k}} = \sum_{j = 1}^N f_j\,\frame{$\displaystyle \hbyw{1.8ex}{0em} C_{k,j} \over \displaystyle C_{k,k}$}\,,\cr
+ &\eqalign{W_k = {α_k \over \Bm α^T \Bm f} = {α_k \over \Bm f^{\,\.T}\! \Bm C\, \Bm f} &= {\sum_{j=1}^N C_{k,j}\,f_j \over \sum_{i=1}^N \sum_{l=1}^N f_i\, f_l\,C_{i,l}} = \sum_{j=1}^N\. f_j\. {C_{k,j} \over \sum_{i=1}^N \sum_{l=1}^N f_i\, f_l\,C_{i,l}}\cr
+    &= \sum_{\rlap{$\matrix{j = 1\,\,\cr C_{k,j}\neq 0}$}}^N\, \Biggl({\sum_{i=1}^N \sum_{l=1}^N f_i\, f_l\,C_{i,l} \over C_{k,j}}\Biggr)^{-1}\!\! = \sum_{\rlap{$\matrix{j = 1\,\,\cr C_{k,j}\neq 0}$}}^N f_j\,\Bigl(\sum_{i=1}^N\sum_{l=1}^N f_i\, f_l\, \frame{$\displaystyle \hbyw{1.8ex}{0em} C_{i,l} \over \displaystyle C_{k,j}$}\,\Bigr)^{-1}
+  } 
 }
 $$
+The dependence on~$ε$ of the quantities $E_k$ and~$W_k$ lies  only in the highlighted ratios.  If we show that those terms converge as~$ε\to 0$, then we are done.
 
-then we are done.
+We can fix a radius~$r\geq 0$ and view $\phi_ε(r)$ as a function of~$ε$ rather than~$r$, and consider its power series expansion at the point~$ε=0$,
+$$
+\phi_ε(r) = a_0(r) + ε\,a_1(r) + ε^2\,a_2(r) + ε^3\,a_3(r) + \cdots,
+$$
+whose coefficients~$a_n(r)$ are explicit functions of~$r$.
+With $\Bm R$ being the distance matrix associated to~$X$, that is the $N\times N$~matrix of elements~$R_{i,j}\coloneq \norm{x_i - x_j}$, define for each~$n$ the matrix~$\hbox{\setff{swsh}\bm A}_{\Bm n}$ by applying the function $a_n$ to each element of~$\Bm R$, explicitly
+$$
+(\hbox{\setff{swsh}\EBGaramond\it A}_{n})_{i,j}\coloneq a_n(R_{i,j}) = a_n(\norm{x_i - x_j}).
+$$
+Under these definitions, the $ε$-dependent matrix~$\Bm A$ has at the point~$ε=0$ the matrix power series expansion
+$$
+ \Bm{A} = \hbox{\setff{swsh}\bm A}_{\Bm 0} + ε\,\hbox{\setff{swsh}\bm A}_{\Bm 1} + ε^2\,\hbox{\setff{swsh}\bm A}_{\Bm 2} + ε^3\,\hbox{\setff{swsh}\bm A}_{\Bm 3} + \cdots. 
+$$
 \postskip
 
 \preskip
