--- a/biblist.bib
+++ b/biblist.bib
@@ -124,7 +124,6 @@ doi = {10.1023/A:1018975909870}
 author = {Fasshauer, Gregory},
 year = {2011},
 month = {01},
-pages = {},
 title = {Positive Definite Kernels: Past, Present and Future},
 volume = {4},
 journal = {Dolomite Res. Notes Approx.}
@@ -138,9 +137,33 @@ journal = {Applied Mathematics and Computation},
 volume = {307},
 pages = {113--123},
 year = {2017},
-%issn = {0096-3003},
 doi = {/10.1016/j.amc.2017.02.043},
-%url = {https://www.sciencedirect.com/science/article/pii/S0096300317301546},
-author = {Licia Lenarduzzi and Robert Schaback},
-%keywords = {Kernels, Classification, Localized approximation, Adaptivity, scattered data}
+author = {Licia Lenarduzzi and Robert Schaback}
+}
+
+
+
+@article{langenhop_1971,
+title = {The Laurent expansion for a nearly singular matrix},
+journal = {Linear Algebra and its Applications},
+volume = {4},
+number = {4},
+pages = {329-340},
+year = {1971},
+issn = {0024-3795},
+doi = {https://doi.org/10.1016/0024-3795(71)90004-8},
+author = {C.E. Langenhop}
+}
+
+
+
+@article{gonzales_rodriguez-moscoso-kindelan_2015,
+title = {Laurent expansion of the inverse of perturbed, singular matrices},
+journal = {Journal of Computational Physics},
+volume = {299},
+pages = {307-319},
+year = {2015},
+issn = {0021-9991},
+doi = {https://doi.org/10.1016/j.jcp.2015.07.006},
+author = {Pedro Gonzalez-Rodriguez and Miguel Moscoso and Manuel Kindelan}
 }
