--- a/positive-definite-functions.tex
+++ b/positive-definite-functions.tex
@@ -93,7 +93,7 @@ $$
 is a family of functions that are positive definite on~$\R^d$ for each~$d$.
 \postskip
 
-The positive definite functions~$\phi$ shown in these two examples have the common property that $\lim_{r\to\infty}\phi(r)$ exists. This is indeed a property that must hold for any function~$\phi$ which is positive definite and radial on each space dimension.  In fact any completely monotone function~$\psi$, and hence its associated positive definite function~$\phi$, posses a limit at infinity simply  because it is non-increasing and bounded below.  Instead, the fact that the  shown functions~$\phi$  are such that
+The positive definite functions~$\phi$ shown in these two examples have the common property that $\lim_{r\to\infty}\phi(r)$ exists. This is indeed a property that must hold for any function~$\phi$ which is positive definite and radial on each space dimension.  In fact any completely monotone function~$\psi$, and hence its associated positive definite function~$\phi$, possess a limit at infinity simply  because it is non-increasing and bounded below.  Instead, the fact that the  shown functions~$\phi$  are such that
 $$
 \phi(0) = 1\quad\mathbox{and}\quad\lim_{r\to\infty}\phi(r) = 0 \eqmark[convention]
 $$
