--- a/native-spaces.tex
+++ b/native-spaces.tex
@@ -123,7 +123,7 @@ $$
 $$
 
 
- Not all functions belong to the native space---the class of functions belonging to~$\Cal N_Φ$ depends on the properties of the {\em reproducing\fnote{A function~$Φ:\,\Omega\times\Omega\to\R$ is called {\em reproducing kernel} for the Hilbert space~$\Cal H$ if it satisfies the reproducing property~\ref[repr].  It is easy to show that the reproducing kernel of a Hilbert space is unique.  It can also be shown, by using the Riesz representation theorem (Stein and Shakarchi~\cite[stein-shakarchi_2009]), that the existence of a reproducing kernel is equivalent to the continuity of the point-evaluation functionals, which are linearly independent if and only if the kernel is positive definite (Wendland~\cite[wendland_2004], chapter~10).} kernel~$Φ$}.  For instance the continuity of the kernel is carried over to the native space.
+ Not all functions belong to the native space---the class of functions belonging to~$\Cal N_Φ$ depends on the properties of the {\em reproducing\fnote{A function~$Φ:\,\Omega\times\Omega\to\R$ is called {\em reproducing kernel} for the Hilbert space~$\Cal H$ if it satisfies the reproducing property~\ref[repr].  It is easy to show that the reproducing kernel of a Hilbert space is unique.  It can also be shown, by using the Riesz representation theorem (Stein and Shakarchi~\cite[stein-shakarchi_2009]), that the existence of a reproducing kernel is equivalent to the continuity of the point-evaluation functionals, which are linearly independent if and only if the kernel is positive definite (Wendland~\cite[wendland_2004], Chapter~10).} kernel~$Φ$}.  For instance the continuity of the kernel is carried over to the native space.
 
 \preskip
 \label[cont-theor]
