--- a/thesis.tex
+++ b/thesis.tex
@@ -68,7 +68,8 @@
 \input adding-data
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chap Dealing with discontinuities
+%\chap Dealing with discontinuities
+\chap Data classification
 
 \sec[buildingsec] Building a regularity classifier
 \input building-a-regularity-classifier
@@ -76,7 +77,12 @@
 \sec Properties of the classifier
 \input properties-of-the-classifier
 
-\sec Edge detection
+\sec Examples
+
+
+\chap ???
+
+\sec Edge detection ???
 
 \sec Reconstruction
 
