--- a/building-a-regularity-classifier.tex
+++ b/building-a-regularity-classifier.tex
@@ -1,8 +1,8 @@
 
-The ideas developed in the previous section can be used to try and classify samples of functions by their regularity.  The regularity classifier that we are going to define will be the main tool necessary to later develop an algorithm for the interpolation of discontinuous functions.
+The ideas developed in Section~\ref[addingsec] can be used to try and classify samples of functions by their regularity.  The regularity classifier that we are going to define will be the main tool necessary to later develop an algorithm for the interpolation of discontinuous functions.
 
 
-In what follows, even if not always strictly necessary, we will assume that  the kernel~$Φ$ is radial, i.e., of the form~\ref[phi] for some univariate positive definite function~$\phi$.  This applies also to the notations, with the letter~$\phi$ replacing the uppercase letter~$Φ$. Moreover, to be specific, $\phi$ will be one of the radial functions introduced in section~\ref[positivesec]. Let $X=\{\range x_N/\}$ be a set of data sites and $f$ a function that is no more assumed to belong to the native space of~$\phi$.  Suppose that $f$ has been sampled at~$X$ and the sampling is dense enough to catch the relevant features of~$f$ on its considered domain.  Our goal is to determine the regularity of~$f$ just by looking at~$X$ and the corresponding sampled function values~$f(X)$.
+In what follows, even if not always strictly necessary, we will assume that  the kernel~$Φ$ is radial, i.e., of the form~\ref[phi] for some univariate positive definite function~$\phi$.  This applies also to the notations, with the letter~$\phi$ replacing the uppercase letter~$Φ$. Moreover, to be specific, $\phi$ will be one of the radial functions introduced in Section~\ref[positivesec]. Let $X=\{\range x_N/\}$ be a set of data sites and $f$ a function that is no more assumed to belong to the native space of~$\phi$.  Suppose that $f$ has been sampled at~$X$ and the sampling is dense enough to catch the relevant features of~$f$ on its considered domain.  Our goal is to determine the regularity of~$f$ just by looking at~$X$ and the corresponding sampled function values~$f(X)$.
 
 
 
@@ -10,7 +10,7 @@ Each index~$k\in\{1,2,\dots,N\}$ determines a splitting of the data sites into t
 $$
 X^{(k)\!}\coloneq X\setminus\{x_k\},\quad s\coloneq s_{X,f}\quad\mathbox{and}\quad s^{(k)\!}\coloneq s_{X^{(k)\!},f}.
 $$
-If the function~$f$ that generated the given sampling~$f(X)$ is a well behaved function, then we should expect that, for each~$k$, the interpolant~$s^{(k)}\!$ predicts quite accurately the value~$f(x_k)$ at the point~$x_k$; instead, if $f$ is a discontinuous function, then there should be some indices~$k$ such that the prediction made by~$s^{(k)}\!$ for the point~$x_k$ is wrong.  Following the considerations of the previous section, we shall consider, for each~$k$, the quantity
+If the function~$f$ that generated the given sampling~$f(X)$ is a well behaved function, then we should expect that, for each~$k$, the interpolant~$s^{(k)}\!$ predicts quite accurately the value~$f(x_k)$ at the point~$x_k$; instead, if $f$ is a discontinuous function, then there should be some indices~$k$ such that the prediction made by~$s^{(k)}\!$ for the point~$x_k$ is wrong.  Following the considerations of Section~\ref[addingsec], we shall consider, for each~$k$, the quantity
 $$
 U_k\coloneq\norm s_\phi^2-\norm{s^{(k)\!}}^2_\phi = {(f_k-s^{(k)\!}(x_k))^2\over P_{X^{(k)\!}}^2(x_k)},
 $$
@@ -41,13 +41,13 @@ $$
 \Bm f\coloneq (\range f_N/)^T = (f(x_1), f(x_2),\dots f(x_N))^T
 $$
 a vector of values sampled from any unknown function~$f\in\R^\Omega$.
-Then the elements~$E_k=f_k-s^{(k)\!}(x_k)$ of the cross-validation vector~$\Bm E$ can be alternatively computed as
+Then the elements~$E_k=f_k-s^{(k)\!}(x_k)$ of the cross-validation vector~$\Bm E$ can be computed as
 $$
 E_k = {α_k\over C_{k,k}},
 $$
 where $\Bm C$ is the inverse of the interpolation matrix~$\Bm A=\Bm A_{\phi,X}$ associated to the kernel~$\phi$ and the set~$X$ of locations, and $\Bm α$ is the vector of coefficients of the unique function~$s\in\Cal S_{\phi,X}$ that interpolates $f$ on~$X$, that is the solution of the linear sistem~$\Bm{Aα} = \Bm f$. 
 \proof
-For each point~$x\in\Omega$ let $\Bm t(x)$ be the evaluation at~$x$ of the vector of kernel translates centred at the points of~$X$, that we already defined in section~\ref[errorsec], namely
+For each point~$x\in\Omega$ let $\Bm t(x)$ be the evaluation at~$x$ of the vector of kernel translates centred at the points of~$X$, that we already defined in~\ref[uandt], namely
 $$
 \Bm t(x)\coloneq (\phi(\norm{x-x_1}), \phi(\norm{x-x_2}), \dots, \phi(\norm{x-x_N}))^T.
 $$
@@ -73,7 +73,7 @@ and hence that $C^{[k]}_j$ would be zero also for each~$j\neq k$. Since equation
 
 It is then possible, for each index~$k\in\{1,2,\dots,N\}$, to define the vector
 $$
-\Bm b^{\lbrace k\rbrace\!}\coloneq \Bm α - {α_k\over C^{[k]}_k}\,\Bm C^{\.[k]},
+\Bm b^{\lbrace k\rbrace\!}\coloneq \Bm α - {α_k\over C^{[k]}_k}\,\Bm C^{\.[k]},\eqmark[rippab]
 $$
 which, if multiplied by~$\Bm A$, becomes
 $$
@@ -86,7 +86,7 @@ $$
 $$
 So, the vector that we called~$\Bm β^{\lbrace k\rbrace\!}$ happens to be the vector~$\Bm b^{\lbrace k\rbrace\!}$ without the $k$-th element, i.e.,
 $$
-\Bm β^{\lbrace k\rbrace\!} = (b^{\lbrace k\rbrace}_1,\dots,\rlap{$\!$\typoscale[1700/]$\backslash$} b^{\lbrace k\rbrace}_k,\dots, b^{\lbrace k\rbrace}_N)^T.
+\Bm β^{\lbrace k\rbrace\!} = (b^{\lbrace k\rbrace}_1,\dots,\rlap{$\!$\typoscale[1700/]$\backslash$} b^{\lbrace k\rbrace}_k,\dots, b^{\lbrace k\rbrace}_N)^T. \eqmark[rippabeta]
 $$
 
 Finally, for each~$k$, the evaluation of~$s^{(k)\!}$ at the point~$x_k\in X$ can be computed in the following way,
@@ -96,8 +96,8 @@ $$
 by reminding that~$\Bm t(x_k)^T\!$ is the $k$-th row of the interpolation matrix~$\Bm A$.~\QED
 \postskip
 
-We are now ready to derive an alternative formula also for the previously defined vector~$\Bm U$.  The following calculations are just a continuation of the previous ones, so neither the context nor the used notations will be repeated.
-\corollary
+Using the arguments of the previous theorem and the same notations, we are now ready to derive an alternative formula also for the previously defined vector~$\Bm U$.
+\proposition
 The elements~$U_k = \norm{s}_\phi^2-\norm{s^{(k)\!}}_\phi^2$ of the vector~$\Bm U$ can be computed also with the formula
 $$
 U_k =  α_k\,E_k = {α_k^2\over C_{k,k}}.
@@ -112,10 +112,10 @@ $$
 This means that the squares of their native space norms assume the values
 $$
 \eqalign{\norm{s}_\phi^2 &= \Bm α^T\! \Bm A\, \Bm α = \Bm α^T\Bm f \cr
-    \norm{s^{(k)\!}}_\phi^2 &= (\.\Bm β^{\lbrace k\rbrace\!})^T\! \Bm A^{(k)}\, \Bm β^{\lbrace k\rbrace} = (\.\Bm β^{\lbrace k\rbrace\!})^T \Bm f\,^{(k)} = (\Bm b^{\lbrace k\rbrace\!})^T \Bm f.
+    \norm{s^{(k)\!}}_\phi^2 &= (\.\Bm β^{\lbrace k\rbrace\!})^T\! \Bm A^{(k)}\, \Bm β^{\lbrace k\rbrace} = (\.\Bm β^{\lbrace k\rbrace\!})^T \Bm f\,^{(k)} \buildrel\mathbox{\ref[rippabeta]}\over= (\Bm b^{\lbrace k\rbrace\!})^T \Bm f.
 }
 $$
-By remembering how~$\Bm β^{\lbrace k\rbrace}$ was defined, their difference evaluates to
+By remembering how~$\Bm b^{\lbrace k\rbrace}$ was defined in~\ref[rippab], their difference evaluates to
 $$
 \eqalign{\norm{s}_\phi^2 -  \norm{s^{(k)\!}}_\phi^2 &= \Bm α^T\Bm f - (\Bm b^{\lbrace k\rbrace\!})^T \Bm f   = (\Bm α - \Bm b^{\lbrace k\rbrace\!})^T \Bm f \cr
                       &= \biggl({α_k \over C^{[k]}_k}\,\Bm C^{\.[k]}\biggr)^T\Bm f ={α_k \over C^{[k]}_k}(\Bm C^{\.[k]})^T\Bm f \cr
@@ -139,7 +139,7 @@ $$
 
 %Given the hdfh  return the variables jdjdjd which denotes respectively
 
-It is clear that the computational complexity of the vector~$\Bm U$ and the vector~$\Bm E$ are similar---both vectors can be computed in time~$O(N^3)$, where $N$~is the number of data sites. 
+It is clear that the vector~$\Bm U$ and the vector~$\Bm E$ have a similar computational complexity---both vectors can be computed in time~$O(N^3)$, where $N$~is the number of data sites. 
 Just to give a concrete example how to actually implement these calculations on a calculator, we present in sequence two MATLAB codes that allow to simultaneously compute both $\Bm E$ and~$\Bm U$, starting from the interpolation matrix~$\Bm A$ and the vector~$\Bm f$ of function values. As a side effect, these codes compute also the matrix~$\Bm C$, the vector of coefficients~$\Bm α$ and the square of the native space norm of~$s$.
 The first code uses the standard MATLAB linear system solver (the backslash operator); the second one instead finds the solution of the linear system by first computing the inverse of~$\Bm A$ using the {\tt pinv} algorithm, which provides maximal stability by sacrificing speed---this is what Fassauer~\cite[fasshauer_2007]~does when he computes the cross-validation vector~$\Bm E$.
 
@@ -192,4 +192,4 @@ $$
 
 Of course it is impossible to tell with certainty how regular a function~$f$ is, just by looking at a set of values sampled from it and without any other assumption about the function itself.
 In fact, $f$~can have an arbitrary behaviour at the other unseen points. This classifier anyhow tries to make a decision based on how well each single data point follows the model prescribed by the other data points alone.
-The regularity is inspected by the kernel function $\phi$, and the tolerance~$\tau$ is the decision boundary between regular (value~$1$) and not regular (value~$-1$) functions, which must be set according to how much evidence is required for the classification. The rationale behind the above given definition for the classifier~$\Cal R$ should become apparent in the following section.
+The regularity is inspected by the function $\phi$, and the tolerance~$\tau$ is the decision boundary between regular (value~$1$) and not regular (value~$-1$) functions, which must be set according to how much evidence is required for the classification. The rationale behind the above given definition for the classifier~$\Cal R$ should become apparent in the following section.
