--- a/positive-definite-functions.tex
+++ b/positive-definite-functions.tex
@@ -18,7 +18,7 @@ $$
 $$
 is invertible.  The invertibility of~$\Bm A_{Φ,\. X}$ of course depends on the function~$Φ$, so not all functions can be successfully used.   Notice that, if the interpolation matrix is invertible, then the set of functions~$\range B_N/$ are actually a {\em basis} for~$\Cal S_{Φ,\. X}$, since they are linearly independent functions.
 
-Now we let~$X$ vary. If we wish to have a recovery process that works on all of~$\R^d$ and is {\em invariant} under Euclidean transformations, which is a very reasonable request\fnote{In other applications it may be useful to require different kinds of transformational invariances, for instance the rotational invariance if we are working on a sphere in~$\R^d$.  See Shaback~\cite[shaback_1997], chapter~3.} in most of the applications, then the space generating function~$Φ$ can be taken of the simpler form
+Now we let~$X$ vary. If we wish to have a recovery process that works on all of~$\R^d$ and is {\em invariant} under Euclidean transformations, which is a very reasonable request\fnote{In other applications it may be useful to require different kinds of transformational invariances, for instance the rotational invariance if we are working on a sphere in~$\R^d$.  See Shaback~\cite[shaback_1997], Chapter~3.} in most of the applications, then the space generating function~$Φ$ can be taken of the simpler form
 $$
 Φ(x,y) = \phi(\norm{x-y})\mathbox{,\quad $x,y\in\Omega$,}\eqmark[phi]
 $$
@@ -128,7 +128,7 @@ $$
 is $k$-times monotone since $(-1)^h\psi_k^{(h)}=k(k-1)\dots(k-h+1)(1-r)^{k-h}_+\geq0$ for each~$h=0,1,\dots,k$, hence it is positive definite on $\R^d$ for any dimension~$d$ such that~$\lfloor d/2\rfloor\leq k-2$.
 \postskip
 
-\noindent The truncated power functions are {\em compactly supported}.  This is an advantage, since a compactly supported function can lead to an interpolation system whose matrix is sparse, so a system which is good from the computational point of view.  However, a single function from this family cannot be used for interpolation on~$\R^d$ for all~$d$.   Indeed, it is known (Wendland \cite[wendland_2004], chapter~9), that a non-trivial continuous function~$\phi$ which is positive definite on~$\R^d$ for all~$d$ cannot have zeros, thus we can’t expect to find a compactly supported function~$\phi$ which is positive definite on~$\R^d$ for all~$d$. 
+\noindent The truncated power functions are {\em compactly supported}.  This is an advantage, since a compactly supported function can lead to an interpolation system whose matrix is sparse, so a system which is good from the computational point of view.  However, a single function from this family cannot be used for interpolation on~$\R^d$ for all~$d$.   Indeed, it is known (Wendland \cite[wendland_2004], Chapter~9), that a non-trivial continuous function~$\phi$ which is positive definite on~$\R^d$ for all~$d$ cannot have zeros, thus we can’t expect to find a compactly supported function~$\phi$ which is positive definite on~$\R^d$ for all~$d$. 
 
 A truncated power function~$\phi$  leads to a function~$Φ$, defined by~\ref[phi], which is not very regular, as it is no more than continuous.  Since the basis functions will determine the smoothness of the approximant, it is necessary to have also smoother functions with local support. One example of such functions is given by the Wendland’s family of functions.
 
@@ -138,7 +138,7 @@ Let $\phi$ be such that~$t\mapsto t\phi(t)\in L^1([0,\infty))$, and define the i
 $$
 (I\phi)(r)=\int_r^\infty t\phi(t)\,dt\mathbox{,\quad $r\geq0$.}
 $$
-Then, starting from the truncated power functions  of the previous example and repeatedly applying the operator~$I$ it is possible to build compactly supported functions~$\phi_{d,k}$ (the subscript~$d$ is the space dimension, while the subscript~$k$ is related to the number of applied iterations of the integral operator) which have polynomial representations and are of the lowest possible degree relative to their smoothness and the space dimension.  Details about this construction are present for instance in Wendland~\cite[wendland_2004], chapter~9. 
+Then, starting from the truncated power functions  of the previous example and repeatedly applying the operator~$I$ it is possible to build compactly supported functions~$\phi_{d,k}$ (the subscript~$d$ is the space dimension, while the subscript~$k$ is related to the number of applied iterations of the integral operator) which have polynomial representations and are of the lowest possible degree relative to their smoothness and the space dimension.  Details about this construction are present for instance in Wendland~\cite[wendland_2004], Chapter~9. 
 We report in table~\ref[wentab], up to positive constant factors, the functions that can be obtained starting from the truncated power function of degree~$2$, along with their smoothness.  These are the most used Wendland’s compactly supported functions, since they work for dimensions~$d\leq 3$.
 \postskip
 
@@ -164,4 +164,4 @@ Finally we notice that every  positive definite radial function~$\phi:[0,\infty)
 $$
 \phi_ε(r) = \phi(ε r),\eqmark[phiepsilon]
 $$
-then $\phi_ε$ is still positive definite and radial.  When we attempt to interpolate a set of sampled function values by using a positive definite radial function, the proper choice of the shape parameter has great impact on the accuracy of the result.  There are various techniques that allow for an automatic correct choice of the shape parameter, the most notable being the leave-one-out cross-validation (LOOCV) method (see Rippa~\cite[rippa_1999] and Fassauer~\cite[fasshauer_2011], section~5).  More about this topic will be disclosed in section~\ref[buildingsec].
+then $\phi_ε$ is still positive definite and radial.  When we attempt to interpolate a set of sampled function values by using a positive definite radial function, the proper choice of the shape parameter has great impact on the accuracy of the result.  There are various techniques that allow for an automatic correct choice of the shape parameter, the most notable being the leave-one-out cross-validation (LOOCV) method (see Rippa~\cite[rippa_1999] and Fassauer~\cite[fasshauer_2011], Section~5).  More about this topic will be disclosed in Section~\ref[buildingsec].
